fixed bug #2